--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/Steveorevo/node-red-contrib-actionflows.git"
   },
   "dependencies": {
+    "string": "git://github.com/Steveorevo/string.js.git"
   },
   "node-red": {
     "nodes": {
